--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.17.1",
     "mongoose": "^5.10.5",
     "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1"
   }
 }
